Fixed a bug with useful-link images on mobiles.

--- a/_assets/css/site-main.css
+++ b/_assets/css/site-main.css
@@ -41,3 +41,7 @@
 .useful-links .link:hover::after {
     width: 55%;
 }
+
+.useful-links .link img {
+    max-width: 100%;
+}
